--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,4 +2,4 @@ sonar.login=admin
 sonar.password=Admin#123
 sonar.projectKey=Frontend_Project
 sonar.projectVersion=1.0
-sonar.sources=./src
+sonar.sources=
