--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.login=admin
-sonar.password=Admin#123
+sonar.password=admin@123
 sonar.projectKey=Frontend_Project
 sonar.projectVersion=1.0
-sonar.sources=
+sonar.sources=./src
